Based on the changes in the diff, here is a concise commit message:
Implement actor risk assessment and historical trend analysis

- Introduce `ActorRiskService` and `StoredActorRiskService` to evaluate risk based on the historical performance of associated actors (individuals and entities).
- Update `CompanyCheckService` to incorporate actor risk into the traffic light assessment logic, triggering warnings for actors linked to high-risk companies.
- Persist company risk scores in `CompanyRoleSnapshotEntity` to enable cross-company risk tracking for roles.
- Enhance the frontend with an "Utvikling over tid" (Development over time) section to visualize score trends and metadata changes.
- Redesign the "Network" UI to display actor-specific risk levels and color-coded company counts.
- Refactor `CompanyCheckService` pagination logic and adopt Java 21 `Math.clamp` for search result bounds.
- Remove unused search functionality in `BrregClient` and simplify county extraction in `CompanyHistoryService`.
- Add unit tests for actor risk scenarios and update existing tests to verify network risk data.